--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,35 +3,75 @@
  */
 html, body {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  font-family: Helvetica, sans-serif;
+  background-color: #fafafa;
+  color: #212121; }
 
 .navbar {
   height: 60px;
   width: 100%;
-  background-color: #1a1a1a;
-  font-family: Helvetica, sans-serif; }
+  font-size: 14px;
+  border-bottom-style: none;
+  background-color: #fafafa; }
+  @media (min-width: 1200px) {
+    .navbar {
+      border-bottom: thin solid #f5f5f5;
+      position: fixed; } }
+  @media (min-width: 1200px) {
+    .navbar nav {
+      width: 960px;
+      margin: 0 auto; } }
   .navbar ul {
-    padding: 0;
-    margin: 0; }
+    margin: 0;
+    padding: 0; }
   .navbar li {
     display: inline;
     float: left;
-    padding: 20px 20px; }
+    width: 100%;
+    display: block;
+    border-bottom-style: solid;
+    border-bottom: thin solid #f5f5f5; }
     .navbar li:hover {
-      background-color: #0a0a0a; }
-    @media (max-width: 400px) {
+      background-color: #f5f5f5;
+      transition: background-color 0.5s ease; }
+    @media (min-width: 1200px) {
       .navbar li {
-        width: 100%;
-        display: block;
-        background-color: #1a1a1a; } }
+        border-bottom-style: none;
+        display: inline;
+        width: auto; } }
   .navbar a {
     display: block;
-    width: 100%;
     text-align: left;
     text-decoration: none;
-    color: #fafafa; }
+    color: #212121;
+    padding: 20px; }
 
-.responsive-container {
-  overflow: hidden; }
+.title-container {
+  text-align: center;
+  vertical-align: middle;
+  padding: 40px; }
+  @media (min-width: 1200px) {
+    .title-container {
+      height: calc(100vh);
+      line-height: calc(100vh);
+      padding: 0; } }
+
+.section-container-dark {
+  background-color: #424242;
+  color: #fafafa; }
+
+section {
+  width: 100%;
+  padding: 20px; }
+  @media (min-width: 1200px) {
+    section {
+      width: 960px;
+      margin: 0 auto; } }
+
+.res-container {
+  overflow: hidden;
+  margin: auto;
+  width: 100%; }
 
 /*# sourceMappingURL=responsive.css.map */
