--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,6 +8,25 @@ html, body {
   background-color: #fafafa;
   color: #212121; }
 
+p {
+  padding-right: 30px; }
+
+a {
+  color: #0277bd;
+  text-decoration: none;
+  position: relative; }
+
+a.styled:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  border-bottom: thin solid #0277bd;
+  transition: 0.3s; }
+a.styled:hover:after {
+  width: 100%; }
+
 .navbar {
   height: 60px;
   width: 100%;
@@ -16,7 +35,7 @@ html, body {
   background-color: #fafafa; }
   @media (min-width: 1200px) {
     .navbar {
-      border-bottom: thin solid #f5f5f5;
+      border-bottom: thin solid #E0E0E0;
       position: fixed; } }
   @media (min-width: 1200px) {
     .navbar nav {
@@ -53,17 +72,17 @@ html, body {
   padding: 40px; }
   @media (min-width: 1200px) {
     .title-container {
-      height: calc(100vh);
-      line-height: calc(100vh);
+      height: 100vh;
+      line-height: 100vh;
       padding: 0; } }
 
 .section-container-dark {
-  background-color: #424242;
-  color: #fafafa; }
+  background-color: #E0E0E0; }
 
 section {
   width: 100%;
-  padding: 20px; }
+  padding: 20px;
+  padding-right: 20px; }
   @media (min-width: 1200px) {
     section {
       width: 960px;
