--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -2,6 +2,26 @@
  * Author: Kayman Brusse
  */
 
+// Variables
+
+$fonts: Helvetica, sans-serif;
+$txt-color: #212121;
+$txt-color-light: #616161;
+$txt-color-link: #0277bd;
+$bg-color: #fafafa;
+$bg-color-dark: #E0E0E0;
+
+$screen-height: 100vh;
+$lg-width: 960px;
+
+
+$navbar-active: #f5f5f5;
+$navbar-height: 60px;
+$navbar-txt-color: #0a0a0a;
+$navbar-txt-size: 14px;
+
+$section-height: 100vh;
+
 // -- Responsive Mixins --
 // Edit these to change when html is responsive.
 @mixin responsive($class) {
@@ -26,26 +46,6 @@
     }
 }
 
-// Variables
-
-$fonts: Helvetica, sans-serif;
-$txt-color: #212121;
-$txt-color-light: #fafafa;
-
-$bg-color: #fafafa;
-$bg-color-dark: #424242;
-
-$screen-height: 100vh;
-$lg-width: 960px;
-
-
-$navbar-active: #f5f5f5;
-$navbar-height: 60px;
-$navbar-txt-color: #0a0a0a;
-$navbar-txt-size: 14px;
-
-$section-height: calc(100vh);
-
 // -- Responsive Classes --
 
 html, body {
@@ -55,6 +55,35 @@ html, body {
     font-family: $fonts;
     background-color: $bg-color;
     color: $txt-color;
+}
+
+// Paragraphs
+p {
+    padding-right: 30px;
+}
+
+// Links
+a {
+    color: $txt-color-link;
+    text-decoration: none;
+    position: relative;
+}
+
+// Links w/ left-to-right underline animation.
+a.styled {
+    &:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0%;
+        border-bottom: thin solid $txt-color-link;
+        transition: 0.3s;
+    }
+    
+    &:hover:after {
+        width: 100%;
+    }
 }
 
 // Navigation Bar
@@ -67,7 +96,7 @@ html, body {
     background-color: $bg-color;
     
     @include responsive(lg) {
-        border-bottom: thin solid $navbar-active;
+        border-bottom: thin solid $bg-color-dark;
         position: fixed;
     }
 
@@ -134,21 +163,21 @@ html, body {
 }
 
 .section-container-dark {
-
     background-color: $bg-color-dark;
-    color: $txt-color-light;
 }
 
 section {
     
     width: 100%;
     padding: 20px;
+    padding-right: 20px;
 
     @include responsive(lg) {
-        width: 960px;
+        width: $lg-width;
         margin: 0 auto;
     }
 }
+
 // Main Responsive Container.
 .res-container {
 
