--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,10 +36,12 @@ a.styled:hover:after {
   font-size: 14px;
   background-color: #fafafa;
   position: fixed; }
-  .navbar.open li.menu_item {
+  .navbar span {
     display: block;
-    width: 100%;
-    border-bottom: thin solid #E0E0E0; }
+    width: 18px;
+    height: 2px;
+    margin-bottom: 4px;
+    background: #212121; }
   @media (min-width: 960px) {
     .navbar nav {
       width: 768px;
@@ -58,9 +60,6 @@ a.styled:hover:after {
       .navbar li {
         display: inline;
         width: auto; } }
-    .navbar li:hover {
-      background-color: #f5f5f5;
-      transition: background-color 0.5s ease; }
     .navbar li.menu_item {
       display: none;
       background-color: #fafafa; }
@@ -79,6 +78,40 @@ a.styled:hover:after {
     color: #212121;
     padding: 20px;
     position: relative; }
+  .navbar.open li.menu_item {
+    display: block;
+    width: 100%;
+    border-bottom: thin solid #E0E0E0; }
+  .navbar.open span {
+    transform: translate(2px, 0px) rotate(45deg) scale(1.2, 1); }
+    .navbar.open span:nth-last-child(2) {
+      opacity: 0;
+      transform: rotate(0deg) scale(0.2, 0.2); }
+    .navbar.open span:nth-last-child(1) {
+      transform: rotate(-45deg) translate(0px, 0px) scale(1.2, 1); }
+
+span.burger {
+  display: block;
+  width: 18px;
+  height: 2px;
+  margin-bottom: 4px;
+  background: #212121;
+  transform-origin: 4px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease; }
+  span.burger:first-child {
+    transform-origin: 0% 0%; }
+  span.burger:nth-last-child(2) {
+    transform-origin: 0% 100%; }
+  span.burger.animate {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323; }
+    span.burger.animate:nth-last-child(3) {
+      opacity: 0;
+      transform: rotate(0deg) scale(0.2, 0.2); }
+    span.burger.animate:nth-last-child(2) {
+      opacity: 1;
+      transform: rotate(-45deg) translate(0, -1px); }
 
 /* -- Title Container -- 
  * 
