--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,18 +20,18 @@ img {
 
 a {
   color: #0277bd;
-  text-decoration: none; }
-
-a.styled:after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  border-bottom: thin solid #0277bd;
-  transition: 0.3s; }
-a.styled:hover:after {
-  width: 100%; }
+  text-decoration: none;
+  position: relative; }
+  a.styled:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    border-bottom: thin solid #0277bd;
+    transition: 0.3s; }
+  a.styled:hover:after {
+    width: 100%; }
 
 .navbar-container {
   border-bottom: thin solid #E0E0E0;
@@ -67,7 +67,6 @@ a.styled:hover:after {
         width: auto; } }
   .navbar-container a {
     display: block;
-    text-decoration: none;
     color: #212121;
     padding: 20px;
     position: relative; }
@@ -133,8 +132,7 @@ section {
   @media (min-width: 960px) {
     section {
       width: 768px;
-      margin: 0 auto;
-      overflow: auto; } }
+      margin: 0 auto; } }
   @media (min-width: 1200px) {
     section {
       width: 960px;
